Firewall code/myfirewall.txt
# Generated by iptables-save v1.4.4 on Tue Apr  5 01:36:24 2011
*nat
:PREROUTING ACCEPT [67:5377]
:OUTPUT ACCEPT [24:1490]
:POSTROUTING ACCEPT [24:1490]
-A PREROUTING -d 172.16.1.2/32 -i eth0 -j DNAT --to-destination 172.16.12.3 
-A POSTROUTING -s 172.16.1.2/32 -o eth1 -j SNAT --to-source 172.16.1.5 
COMMIT
# Completed on Tue Apr  5 01:36:24 2011
# Generated by iptables-save v1.4.4 on Tue Apr  5 01:36:24 2011
*filter
:INPUT ACCEPT [294:129496]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [245:24060]
-A INPUT -j DROP 
-A INPUT -i leo -j ACCEPT 
-A INPUT -d 172.16.12.3/32 -i eth1 -j ACCEPT 
-A FORWARD -j DROP 
-A FORWARD -s 172.16.12.2/32 -i eth1 -o eth0 -p tcp -m tcp --sport 23 -j ACCEPT 
-A FORWARD -d 172.16.12.2/32 -i eth0 -o eth1 -p tcp -m tcp --dport 23 -j ACCEPT 
-A OUTPUT -j ACCEPT 
-A OUTPUT -s 172.16.12.3/32 -o eth1 -j ACCEPT 
COMMIT
# Completed on Tue Apr  5 01:36:24 2011
